# fred-idl

./: .gitignore  AUTHORS  Admin.idl  CHANGELOG.rst  CMakeLists.txt  ChangeLog  ChangeLog.rst  EPP.idl  MANIFEST.in  Makefile.am  Makefile.in  Whois.idl  ZoneGenerator.idl  _Admin.idl  _EPP.idl  _FileManager.idl  _Mailer.idl  _TechCheck.idl  _Whois.idl  _ZoneGenerator.idl  _dataTypes.idl  _zone.idl  admin_new.idl  ccReg.idl  configure  configure.ac  doxy.conf  fred-idl.spec.in  setup.cfg  setup.py
cmake/: FindOMNIORB4.cmake  FindORBIT2.cmake
contrib/fedora/: Makefile  fix-omniidl-bug-in-f27.patch  fred-idl.spec  fred-idl.spec.in
doc/: Doxyfile  docbook.xsl  mainpage.h
idl/: Accounting.idl  Admin.idl  AdminContactVerification.idl  AdministrativeBlocking.idl  AutomaticKeysetManagement.idl  Buffer.idl  ContactVerification.idl  DateTime.idl  DomainBrowser.idl  EPP.idl  FileManager.idl  Filters.idl  IsoDate.idl  IsoDateTime.idl  Logger.idl  LoggerFilter.idl  LoggerRequestCount.idl  Mailer.idl  Messages.idl  ModEPP.idl  ModWhois.idl  MojeID.idl  MojeID2.idl  Notification.idl  NullableIsoDate.idl  NullableIsoDateTime.idl  NullableTypes.idl  Pain.idl  PublicRequest.idl  RecordStatement.idl  Registry.idl  TechCheck.idl  Whois.idl  Whois2.idl  Zone.idl  ZoneGenerator.idl  _Admin.idl  _EPP.idl  _FileManager.idl  _Logger.idl  (+7 more)
