[metadata]
name = fred-idl
version = 2.36.1
author_email = vlastimil.zima@nic.cz
description = FRED server interface definition files
long_description = file: README.rst, CHANGELOG.rst
license = GPLv3+
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet

[options]
packages =
    fred_idl
python_requires = >=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4
install_requires =
    omniORB

[build_idl]
modules = fred_idl
idl_files = idl/*.idl
